--- a/_posts/2020-04-18-aprilart.markdown
+++ b/_posts/2020-04-18-aprilart.markdown
@@ -6,14 +6,14 @@ date:   2020-04-18 01:43:08 -0700
 categories: blog post
 ---
 
-After finishing the Alphabestiary, I've been trying a couple new art formats: bird-inspired portraits, and gesture sheets.  For the former, I start with a photo reference of a suitably primeval-looking bird, and draw a dinosaur in its plumage.  See my post on [archosaur integument](http://obscuredinosaurfacts.com/blog/post/2019/11/16/fuzz.html) for which dinosaurs were likely to have what types of plumage.  For the latter, I sketch four or more varying poses of the same critter in an effort to show more than one aspect or angle of the subject.  Without further ado, here they are!
+After finishing the Alphabestiary, I've been trying a couple new art formats: bird-inspired portraits and gesture sheets.  For the former, I start with a photo reference of a suitably primeval-looking bird, and draw a dinosaur in its plumage.  See my post on [archosaur integument](http://obscuredinosaurfacts.com/blog/post/2019/11/16/fuzz.html) for which dinosaurs were likely to have what types of plumage.  For the latter, I sketch four or more varying poses of the same critter in an effort to show more than one aspect or angle of the subject.  Without further ado, here they are!
 
 ### Gestures
 
 #### *Pakasuchus*
 ![pakasuchus](/assets/images/posts/pakasuchus.png)
 
-*Pakasuchus*, meaning "cat crocodile," was a notosuchian from late Early Cretaceous Tanzania.  It had mammal-like heterodont teeth, with canines, premolars, and molars that would've allowed it to chew.  It had reduced armor along its body but retained a heavily armored tail for some reason.  I've given my Pakasuchus speculative ear pinnae, since osteological correlates (bone textures) in advanced notosuchians have hinted at an external earflap-like structure, but we don't know the extent of these structures.  Here, it's engaging in various catlike poses.  10/10 would pet.  If you're familiar with my prior work, this is the third notosuchian I've decked out in ears; in Inktober I drew *Araripesuchus* as being convergent with a wolf, and around Christmastime I drew *Baurusuchus* in the form factor of a lion.
+*Pakasuchus*, meaning "cat crocodile," was a notosuchian from late Early Cretaceous Tanzania.  It had mammal-like heterodont teeth, with canines, premolars, and molars that would've allowed it to chew.  It had reduced armor along its body but retained a heavily armored tail for some reason.  I've given my *Pakasuchus* speculative ear pinnae, since **osteological correlates** (bone textures) in advanced notosuchians have hinted at an external earflap-like structure, though we don't know the extent of these structures.  Here, it's engaging in various catlike poses.  10/10 would pet.  If you're familiar with my prior work, this is the third notosuchian I've decked out in ears; in Inktober I drew *Araripesuchus* as being convergent with a wolf, and around Christmastime I drew *Baurusuchus* in the form factor of a lion.
 
 #### *Dineobellator*
 ![dineobellator](/assets/images/posts/dineobellator.png)
@@ -25,7 +25,7 @@ It's the brand-new velociraptorine from Latest Cretaceous New Mexico, *Dineobell
 #### *Latenivenatrix*
 ![latenivenatrix](/assets/images/posts/latenivenatrix.png)
 
-I was inspired to start doing these feathery portraits because of a photo of a harpy eagle I stumbled upon on Reddit.  It looked so primeval and full of personality that I wanted to see what it would look like as a non-avian dinosaur.  *Latenivenatrix* was a large troodontid from Late Cretaceous Alberta.  It's currently the largest troodontid known, at around 3.5m long (*Deinonychus*-sized).  Its name means "hiding huntress" (-venatrix is the female form of -venator, meaning "hunter").  I like how the head feathers look sort of like a barette or something, making her look more fancy and feminine.  Fun fact, this dinosaur is what I named my new bicycle after.  I call it "Lottie" for short.
+I was inspired to start doing these feathery portraits because of a photo of a harpy eagle I stumbled upon on Reddit.  It looked so primeval and full of personality that I wanted to see what it would look like as a non-avian dinosaur.  *Latenivenatrix* was a large troodontid from Late Cretaceous Alberta.  It's currently the largest troodontid known, at around 3.5m long (*Deinonychus*-sized).  Its name means "hiding huntress" (-venatrix is the female form of -venator, meaning "hunter").  I like how the head feathers look sort of like a barette, making her look more fancy and feminine.  Fun fact, this dinosaur is what I named my new bicycle after.  I call it "Lottie" for short.
 
 #### *Hesperonychus*
 ![hesperonychus](/assets/images/posts/hesperonychus.png)
@@ -35,7 +35,7 @@ I was inspired to start doing these feathery portraits because of a photo of a h
 #### *Thescelosaurus*
 ![thescelosaurus](/assets/images/posts/thescelosaurus.jpg)
 
-*Thescelosaurus* was a large (200-300kg) parksosaurid ornithischian from Latest Cretaceous North America.  It had both teeth toward the back of its snout and a beak on the tip.  This one is dressed up as a wood grouse or capercaillie.  I have been informed that this type of birdlike branching feather is outside the phylogenetic bracket including ornithischians; a more accurate deptiction would give it simple filaments.
+*Thescelosaurus* was a large (200-300kg) parksosaurid ornithischian from Latest Cretaceous North America.  It had teeth toward the back of its snout as well as a beak on the tip.  This one is dressed up as a wood grouse or capercaillie.  I have been informed that this type of birdlike branching feather is outside the phylogenetic bracket including ornithischians; a more accurate deptiction would give it simple filaments.
 
 #### *Siamraptor*
 ![siamraptor](/assets/images/posts/siamraptor.png)
@@ -98,7 +98,7 @@ I'm surprised that it seems like nobody's done this before.  Land Before Time po
 
 ![rubypetrie](/assets/images/posts/rubypetrie.png)
 
-Here's a scene from early Late Cretaceous (86-84 Ma) Mongolia.  A curious young *Oviraptor* encounters something she's never seen before: a stray *Pteranodon* flapling, blown astray from Canada by a storm.  Major differences from the original character designs include: Petrie's wings actually have bones in them (they're not just a cape) and he's quadrupedal on the ground; Ruby is fully feathered and winged, and her pennaceous feathers are in logical places, ie wings and tail and not randomly on her back and neck.
+Here's a scene from early Late Cretaceous (86-84 Ma) Mongolia.  A curious young *Oviraptor* encounters something she's never seen before: a stray *Pteranodon* flapling, blown astray from Canada by a storm.  Major differences from the original character designs include: Petrie's wings actually have bones in them (they're not just a cape) and he's quadrupedal on the ground; Ruby is fully feathered and winged, and her pennaceous feathers are in logical places, i.e. wings and tail and not randomly on her back and neck.
 
 ![littlefootspike](/assets/images/posts/littlefootspike.png)
 
