--- a/_posts/2020-05-23-mayart.markdown
+++ b/_posts/2020-05-23-mayart.markdown
@@ -16,7 +16,7 @@ I haven't been drawing as much this past month, but here's what I did do!
 #### *Allosaurus* hatchlings
 ![allo-hatchlings](/assets/images/posts/allo-hatchlings.png)
 
-*Allosaurus* was a very well-known theropod dinosaur from Late Jurassic North America.  Here, some speculatively fluffy hatchlings beg mom for food.  Similarlu to what is known about the ontogeny of *Tyrannosaurus*, *Allosaurus* juveniles were more leggy than the adults, indicating that they may have filled a different ecological niche so as not to compete.  Since drawing this, I've been informed that scale impressions are known from *Allosaurus* juveniles, but that material is from older individuals than I have pictured here.  So I'll admit that this drawing is improbable, but not impossible!
+*Allosaurus* was a very well-known theropod dinosaur from Late Jurassic North America.  Here, some speculatively fluffy hatchlings beg mom for food.  Similarly to what is known about the ontogeny of *Tyrannosaurus*, *Allosaurus* juveniles were more leggy than the adults, indicating that they may have filled a different ecological niche so as not to compete.  Since drawing this, I've been informed that scale impressions are known from *Allosaurus* juveniles, but that material is from older individuals than I have pictured here.  So I'll admit that this drawing is improbable, but not impossible!
 
 #### *Microraptor*
 ![microraptor](/assets/images/posts/microraptor.png)
