--- a/_posts/2021-05-05-pokemon.md
+++ b/_posts/2021-05-05-pokemon.md
@@ -90,7 +90,7 @@ Before we jump into the Fossil Pokémon, I'll just take a second to list a few o
 
 We've made it to the actual Fossil Pokémon, which are more explicit in their paleontological source of inspiration.  They also say some pretty interesting and sometimes incriminating things in their Pokédex flavor-text, so I'll go into a bit more detail on that here.  Gen 1 includes the ammonite-like Omanyte and Omastar, the horseshoe crab-like Kabuto and Kabutops, and the pterosaur-like Aerodactyl.
 
-Ammonites were a type of shelled cephalopod that looked superficially similar to modern nautiluses (think snail shell with a squid head sticking out) but were actually more closely related to the other living cephalopods: octopuses, cuttlefish, and squid.  They were a very long-lived group, ranging from the Early Devonian all the way to the Late Cretaceous, finally going extinct in or near the same extinction that killed the non-avian dinosaurs.  They came in many shapes and sizes, including the giant *Titanites*, with a 1.37-meter-long shell, and the knotty-shelled *Nipponites* and *Didymoceras*, which look like they would have been so un-hydrodynamic that they shouldn't've been able to swim at all.  Omanyte's and Omastar's shell shape seem to be based on that of a classic spiral ammonite, but the fact that they crawl on the ground rather than swimming may be a nod to an even more ancient basal cephalopod such as *Plectronoceras*:
+Ammonites were a type of shelled cephalopod that looked superficially similar to modern nautiluses (think snail shell with a squid face sticking out) but were actually more closely related to the other living cephalopods: octopuses, cuttlefish, and squid.  They were a very long-lived group, ranging from the Early Devonian all the way to the Late Cretaceous, finally going extinct in or near the same extinction that killed the non-avian dinosaurs.  They came in many shapes and sizes, including the giant *Titanites*, with a 1.37-meter-long shell, and the knotty-shelled *Nipponites* and *Didymoceras*, which look like they would have been so un-hydrodynamic that they shouldn't've been able to swim at all.  Omanyte's and Omastar's shell shapes seem to be based on that of a classic spiral ammonite, but the fact that they crawl on the ground rather than swimming may be a nod to an even more ancient basal cephalopod such as *Plectronoceras*:
 
 ![plectronoceras](/assets/images/posts/plectronoceras.png)
 
@@ -108,13 +108,13 @@ Kabuto (meaning "helmet" in Japanese) is essentially just a modern horseshoe cra
 
 Unfortunately, the game requirement that a Pokémon's evolved form be cooler than the pre-evolution caused Nintendo to just slap some praying mantis limbs on it, resulting in something noticeably chimera-like and, in my opinion, not very well designed.
 
-Aerodactyl is named after the diminutive but famous pterosaur genus *Pterodactylus*, and its design is based loosely on generic pterosaurs, with aspects of dragons thrown in.  In another case of life imitating art imitating life, a genus of pterosaur closely related to *Pterodactylus* was named *Aerodactylus* after the Pokémon.  Aerodactyl's Pokédex descriptions state that it was resurrected "using DNA taken from amber," an homage to the then-recently released *Jurassic Park*.  Some of the entries actually say "it was regenerated from a dinosaur's genetic matter that was found in amber," which makes no sense--which dinosaur?--but this could be interpreted as a further nod to *Jurassic Park*'s use of frog DNA to patch up their spotty dinosaur genome.  One interesting thing about Aerodactyl is that it's the only Fossil Pokémon with a Mega Evolution, and the game treats this in a unique way.  According to the Pokédex, "some scholars claim that [Mega Evolution] is Aerodactyl's true appearance," and "apparently even modern technology is incapable of producing a perfectly restored specimen."  This implies that the appearances of resurrected Fossil Pokémon are more like paleoart guesses, and only with the magic of Mega Evolution can one see what it truly looked like in the past.  Maybe one day they'll make a Fossil Pokémon with multiple formes representing different interpretations of the remains!  For example, a "raptor" dinosaurian Pokémon that comes in both scaly and feathery formes.
+Aerodactyl is named after the diminutive but famous pterosaur genus *Pterodactylus*, and its design is based loosely on generic pterosaurs, with aspects of dragons thrown in.  In another case of life imitating art imitating life, a genus of pterosaur closely related to *Pterodactylus* was named *Aerodactylus* after the Pokémon.  Aerodactyl's Pokédex descriptions state that it was resurrected "using DNA taken from amber," an homage to the then-recently released *Jurassic Park*.  Some of the entries actually say "it was regenerated from a dinosaur's genetic matter that was found in amber," which makes no sense--which dinosaur?--but this could be interpreted as a further nod to *Jurassic Park*'s use of frog DNA to patch up their spotty dinosaur genome.  One interesting thing about Aerodactyl is that it's the only Fossil Pokémon with a Mega Evolution, and the game treats this in a unique way.  According to the Pokédex, "some scholars claim that [Mega Evolution] is Aerodactyl's true appearance," and "apparently even modern technology is incapable of producing a perfectly restored specimen."  This implies that the appearances of resurrected Fossil Pokémon are more like paleoart guesses, and only with the magic of Mega Evolution can one see what they truly looked like in the past.  Maybe one day they'll make a Fossil Pokémon with multiple formes representing different interpretations of the remains!  For example, a "raptor" dinosaurian Pokémon that comes in both scaly and feathery formes.
 
-Overall, I think Gen 1's emphasis on really ancient and less charismatic fossil animals is pretty admirable.  Rather than going straight for a *Tyrannosaurus* Pokémon (more on that one later) they explored the evolutionary relationships and adaptations of ammonites and horseshoe crabs.
+Overall, I think Gen 1's emphasis on really ancient and less charismatic fossil animals is pretty admirable.  Rather than going straight for a *Tyrannosaurus* Pokémon (more on that one later), they explored the evolutionary relationships and adaptations of ammonites and horseshoe crabs.
 
 #### Gen 3
 
-Gen 3 sticks with the "obscure prehistoric beast" theme, with the crinoid-like Lileep and Cradily, and the anomalocarid-like Anorith and Armaldo.  Similarly to Kabuto, the pre-evolutions in the Gen 3 families are essentially just cartoon versions of the real animal.  Crinoids are a living group of animals related to starfish, that come in [very creepy free-swimming forms](https://www.youtube.com/watch?v=OyketlthVWg&t=22s) and stalked, sessile forms like Lileep.  They've been around since the Ordovician Period around 467 million years ago, and are still diverse and abundant today, so I'm not really sure why Nintendo chose to claim that Lileep "became extinct approximately 100 million years ago".  Maybe 100 million just seems like a long time?
+Gen 3 sticks with the "obscure prehistoric beast" theme, with the crinoid-like Lileep and Cradily, and the anomalocarid-like Anorith and Armaldo.  Similarly to Kabuto, the Little Cup members of the Gen 3 families are essentially just cartoon versions of the real animal.  Crinoids are a living group of animals related to starfish, which come in [very creepy free-swimming forms](https://www.youtube.com/watch?v=OyketlthVWg&t=22s) known as feather stars, and stalked, sessile forms like Lileep, known as sea lilies.  They've been around since the Ordovician Period around 467 million years ago, and are still diverse and abundant today, so I'm not really sure why Nintendo chose to claim that Lileep "became extinct approximately 100 million years ago".  Maybe 100 million just seems like a long time?
 
 Anomalocarids, the most famous member being *Anomalocaris*, were the world's first apex predators, killing smaller, soft-bodied animals with their claws and sucking them into their little round mouths.
 
@@ -136,7 +136,7 @@ Cranidos is a small, cute pachycephalosaur with a large domed skull.  This is al
 
 The Pokédex states that Cranidos is an herbivore that headbutts trees in order to get at their berries.  Rampardos's entries state that its brain is even smaller relatively than Cranidos's, which is already said to be unintelligent, and that "some theories suggest that its stupidity led to its extinction."  This is again an example of the "evolved oneself into a corner" misconception.  Interestingly, Rampardos is said to be a carnivore, which could be a reference to the fact that pachycephalosaurs are thought to have been omnivorous.  So overall, a mixed bag with these Pokémon's entries.
 
-Shieldon is a plain-frilled little ceratopsian said to eat grass, berries, and roots.  Strangely, while one of its Pokédex entries states that it lived 100 million years ago, all the others claim that its fossils were extracted from "a layer of clay that was older than anyone knows."  One also states that "nothing but its face has ever been discovered," a reference to **preservation bias**!  Nice.  Bastiodon is said to have formed "a wall with their shield-like faces to protect their young," which is something ceratopsians have often been hypothesized to have done (although there's no direct evidence of it), and which [elephants in fact do](https://www.elephantvoices.org/multimedia-resources/gestures-db-structure/412-mother-offspring/reassurance-protection/1782-defensive-circle.html?layout=gesture).  Another entry says, "The bones of its face are huge and hard, so they were mistaken for its spine until this Pokémon was successfully restored," which is not a reference to any specific incident that I'm aware of, but generally refers to paleontologists' difficulties in reconstructing a skeleton when the bones are discovered disarticulated.  I wonder why Shieldon and Bastiodon's entries are so much more scientific than Cranidos and Rampardos's!  Maybe different writers were responsible for them, some of whom were more motivated to do research than others.
+Shieldon is a plain-frilled little ceratopsian said to eat grass, berries, and roots.  Strangely, while one of its Pokédex entries states that it lived 100 million years ago, all the others claim that its fossils were extracted from "a layer of clay that was older than anyone knows."  One also states that "nothing but its face has ever been discovered," a reference to **preservation bias**!  Nice.  Bastiodon is said to have formed "a wall with their shield-like faces to protect their young," which is something ceratopsians have often been hypothesized to have done (although there's no direct evidence of it), and which [elephants in fact do](https://www.elephantvoices.org/multimedia-resources/gestures-db-structure/412-mother-offspring/reassurance-protection/1782-defensive-circle.html?layout=gesture).  Another entry says, "The bones of its face are huge and hard, so they were mistaken for its spine until this Pokémon was successfully restored," which is not a reference to any specific incident that I'm aware of, but generally refers to paleontologists' difficulties in reconstructing a skeleton when the bones are discovered disarticulated.  I wonder why Shieldon and Bastiodon's entries are so much more scientific than Cranidos and Rampardos's!  Maybe different writers were responsible for each, some of whom were more motivated to do research than others.
 
 #### Gen 5
 
@@ -150,7 +150,7 @@ They both have indentations on their backs that resemble the gaps between the bo
 
 Archen and Archeops are clearly Pokémon versions of the early bird *Archaeopteryx*.  Archen is incapable of powered flight but is able to glide down from trees, while Archeops can fly but must "use a running start," representing both the "ground-up" and "trees-down" hypotheses of how flight began.  They are both said to be omnivorous, intelligent, and social, which agrees with [what we believe](https://pubmed.ncbi.nlm.nih.gov/14685004/) about *Archaeopteryx*.  According to the Pokédex, "Once thought to be the ancestor of all bird Pokémon, some of the latest research suggests that may not be the case."  This may be a reference to the recent discovery of older avialans such as the anchiornithids, which displaced *Archaeopteryx* as the oldest known birds.  The Pokédex also states that "this ancient Pokémon's plumage is delicate, so if anyone other than an experienced professional tries to restore it, they will fail," a nod to the difficulty of preparing fossils.
 
-While Archen's and Archeops's Pokédex entries are pretty scientific, their appearance is not.  Archeops has its primary feathers tacked onto non-wing-shaped arms (and extending all the way up to the armpits).  Its foot feathers are supposed to be a reference to four-winged dinosaurs like *Anchiornis* and *Microraptor*, but Archeops just keeps its feet tucked up awkwardly in battle instead of using its legs to help it fly.  Its contrasty coloration and naked neck, head, and tail emphasize distinct parts as being "reptilian" versus "avian" instead of being one coherent animal.  In fact, it eerily resembles the sarcastic infographic about "how not to draw dinosaurs" I used in my other [post](https://obscuredinosaurfacts.com/blog/post/2020/07/31/accuracy-paleoart.html), except the base skin and feather colors are swapped.
+While Archen's and Archeops's Pokédex entries are pretty scientific, their appearance is not.  Archeops has its primary feathers tacked onto non-wing-shaped arms (and extending all the way up to the armpits).  Its foot feathers are supposed to be a reference to four-winged dinosaurs like *Anchiornis* and *Microraptor*, but Archeops just keeps its feet tucked up awkwardly in battle instead of using its legs to help it fly.  Its contrasty coloration and naked neck, head, and tail emphasize distinct parts as being "reptilian" versus "avian" instead of being one coherent animal.  In fact, it eerily resembles the sarcastic infographic about "how not to draw dinosaurs" I used in my other [post](https://obscuredinosaurfacts.com/blog/post/2020/07/31/accuracy-paleoart.html), except with the base skin and feather colors swapped.
 
 {% include image-caption.html imageurl="/assets/images/posts/sarcastic-infographic.jpg#wide" title="sarcastic infographic" caption="Always draw a feather mohawk. Always!" %}
 
@@ -176,7 +176,7 @@ Apparently Amaura whinnies, while Aurorus howls.  I suppose you could interpret 
 
 #### Gen 8
 
-Finally, we have the strange hybrid Fossil Pokémon, Arctovish, Arctozolt, Dracovish, and Dracozolt.  For those of you who aren't familiar with the new gen, these are created by a new game mechanism: by combining one of two "front half" fossils with one of two "back halves".  The front halves are a "Fossilized Bird" (something resembling a dromaeosaur, or "raptor" dinosaur) and "Fossilized Fish" (something resembling *Dunkleosteus*, a plate-armored Devonian fish), and the back halves are a "Fossilized Drake" (something resembling a stegosaur) and "Fossilized Dino" (something resembling a mosasaur or metriorhynchid, neither of which are dinosaurs).  While the results are odd and fanciful, the idea behind them is the real paleontological concept of [composite specimens](https://obscuredinosaurfacts.com/blog/post/2019/08/31/brontosaurus-isnt-real.html).  When a full skeleton isn't available, what do you base your guesses on when filling in the gaps?  In the olden days, when ancient creatures weren't yet well understood and not much fossil material was available, debacles like the ["head-on-the-wrong-end *Elasmosaurus*"](https://commons.wikimedia.org/wiki/File:Cope_Elasmosaurus.jpg) and "*Camarasaurus* head, *Apatosaurus* body" were common.  Dracovish and Arctovish are direct references to the former incident, with Dracovish's head on the opposite end of the body than Dracozolt, and Arctovish's head on perpendicular to Dracovish's (yes, that's Arctozolt's mouth on the top).
+Finally, we have the strange hybrid Fossil Pokémon, Arctovish, Arctozolt, Dracovish, and Dracozolt.  For those of you who aren't familiar with the new gen, these are created by a new game mechanism: by combining one of two "front half" fossils with one of two "back halves".  The front halves are a "Fossilized Bird" (something resembling a dromaeosaur, or "raptor" dinosaur) and "Fossilized Fish" (something resembling *Dunkleosteus*, a plate-armored Devonian fish), and the back halves are a "Fossilized Drake" (something resembling a stegosaur) and "Fossilized Dino" (something resembling a mosasaur or metriorhynchid, neither of which are dinosaurs).  While the results are odd and fanciful, the idea behind them is the real paleontological concept of [composite specimens](https://obscuredinosaurfacts.com/blog/post/2019/08/31/brontosaurus-isnt-real.html).  When a full skeleton isn't available, what do you base your guesses on when filling in the gaps?  In the olden days, when ancient creatures weren't yet well understood and not much fossil material was available, debacles like the ["head-on-the-wrong-end *Elasmosaurus*"](https://commons.wikimedia.org/wiki/File:Cope_Elasmosaurus.jpg) and "*Camarasaurus* head, *Apatosaurus* body" were common.  Dracovish and Arctovish are direct references to the former incident, with Dracovish's head on the opposite end of the body than Dracozolt, and Arctovish's head on perpendicular to Dracovish's (yes, that's Arctovish's mouth on the top).
 
 Even their Pokédex entries are extremely tongue-in-cheek, with each describing an "evolved itself into a corner" justification for why the improbable animal went extinct.  Dracozolt "went extinct...after it depleted all its plant-based food sources"; Arctozolt "went extinct because it moved so slowly"; Dracovish went extinct due to "overhunting of its own prey"; and Arctovish went extinct due to "breathing difficulties".  Honestly, I love how self-aware these Fossil Pokémon are, but I worry a little bit that the parody will escape younger or less paleo-savvy players.
 
